--- a/Diagram_Addition_Practice_Cloud_Query_Generator.ipynb
+++ b/Diagram_Addition_Practice_Cloud_Query_Generator.ipynb
@@ -123,7 +123,7 @@
       "cell_type": "code",
       "source": [
         "import os\n",
-        "os.environ[\"OPENAI_API_KEY\"] = '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'"
+        "os.environ[\"OPENAI_API_KEY\"] = 
       ],
       "metadata": {
         "id": "oHHrhxjSVgPI"
@@ -134,7 +134,7 @@
     {
       "cell_type": "code",
       "source": [
-        "OPENAI_API_KEY = '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'\n",
+        "OPENAI_API_KEY = 
         "client = OpenAI()"
       ],
       "metadata": {
